# Visor_VPS

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  db.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: containers.rs  metrics.rs  mod.rs  nginx.rs  services.rs  ssh.rs  storage.rs
src/lib/: api.ts  stores.ts  types.ts
src/lib/components/: AddServerModal.svelte  LogViewer.svelte  MetricCard.svelte  MetricChart.svelte  ProjectCard.svelte  Sidebar.svelte  SparklineChart.svelte
src/lib/views/: ContainersView.svelte  Dashboard.svelte  NginxView.svelte  ProcessesView.svelte  ProjectsView.svelte  ServicesView.svelte  SettingsView.svelte
src/routes/: +layout.svelte  +page.svelte
