[package]
name = "visor-vps"
version = "0.1.0"
description = "VPS Monitor & Manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This is a workaround for https://github.com/rust-lang/cargo/issues/6313
name = "visor_vps_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
tauri-plugin-dialog = "2.6.0"
